--- a/profil.html
+++ b/profil.html
@@ -22,7 +22,7 @@
     <section id="profil">
         <h2>Profil</h2>
         <figure style="font-size: 10px;">
-            <img src="https://media.discordapp.net/attachments/1185947117248847982/1186336332474224784/DSC_0053.JPG?ex=672a404e&is=6728eece&hm=f9a87f03bb1db6e54ecad440a20f1425006e504fbf4acd9881ffce7974ea6ad4&=&format=webp&width=1005&height=670" alt="gambar Rafid">
+            <img src="../assets/DSC_0053.JPG">
             <figcaption>Rafid Tertiano Ramadhan, Comic Frontier 17, 17 Desember 2023.</caption>
         </figure>
         <span></span>
